# rag-wiki

./: .gitignore  .gitlab-ci.yml  README.md  第二阶段完成总结.md  第二阶段最终总结.md
rag-wiki-deploy/: .gitlab-ci.yml  docker-compose.staging.yml  docker-compose.yml
rag-wiki-frontend/: .env.development  .env.production  .eslintrc.js  Dockerfile  UI优化说明.md  eslint.config.js  index.html  nginx.conf  package.json  (+3 more)
rag-wiki-python/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
rag-wiki-python/app/api/v1/: agent.py  badcase_optimizer.py  content_assist.py  document_parser.py  domain_tuning.py  enterprise_agent.py  memory.py  quality_tools.py  rag_conversation.py  sandbox.py  third_party.py  vector_admin.py  vector_retrieval.py  workflow.py
rag-wiki-python/app/core/: celery_app.py  config.py  database.py  http_client.py  middleware.py  response.py  tracing.py  validators.py  vector_db.py
rag-wiki-python/app/services/: agent.py  agent_orchestrator.py  ai_config_service.py  anomaly_detector.py  badcase_optimizer.py  chunking.py  code_sandbox.py  document_parser.py  domain_model_tuning.py  embedding.py  enhanced_rag.py  enterprise_agent_orchestrator.py  faithfulness_validator.py  llm_init.py  llm_provider.py  memory.py  memory_conflict_detector.py  minio_storage.py  paddle_ocr.py  parent_document_retriever.py  post_search_validator.py  quality_assurance.py  quality_evaluator.py  query_understanding.py  rag_engine.py  reranker.py  sandbox.py  third_party_integration.py  vector_filter.py  workflow_engine.py
rag-wiki-python/tests/: conftest.py  test_vector_filter.py
(+254 files in other folders)
