[project]
name = "rag-wiki-python"
version = "1.0.0"
description = "智维Wiki Python AI微服务集群"
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-community = "^0.0.10"
pymilvus = "^2.4.0"
qdrant-client = "^1.7.0"
celery = {extras = ["rabbitmq"], version = "^5.3.0"}
redis = "^5.0.0"
minio = "^7.2.0"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.0"
httpx = "^0.25.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
paddleocr = "^2.7.0"
paddlepaddle = "^2.5.0"
PyMuPDF = "^1.23.0"
python-docx = "^1.1.0"
openpyxl = "^3.1.0"
python-pptx = "^0.6.22"
tabula-py = "^2.9.0"
camelot-py = "^0.11.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
sentence-transformers = "^2.2.0"
docker = "^6.1.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^6.1.0"
